--- a/ykb-tech/package.json
+++ b/ykb-tech/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.3",
+    "@supabase/supabase-js": "^2.95.3",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.3",
+    "axios": "^1.13.5",
     "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
